--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,35 +1,34 @@
+body {
+  background-color: #05518a;
+}
+
 h1 {
   text-align: center;
+  color: #dc0707;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
+#container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-th {
-  background-color: #ddd;
-  text-align: center;
-  padding: 8px;
+.box {
+  width: 30%;
+  height: 30%;
+  margin: 2%;
+  padding: 2%;
   border: 1px solid #ccc;
+  text-align: center;
+  background-color: #f9f9f9;
+  color: #444444;
 }
 
-td {
-  text-align: center;
-  padding: 8px;
-  border: 1px solid #ccc;  
+.box a {
+  color: #2e8b57;
 }
 
-tr:nth-child(even) {
-  background-color: #f2f2f2;
-  text-align: center;
+.box .logo {
+  background-color: #fff;
 }
 
-.lines:nth-child(even) {
-  background-color: burlywood;  
-}
-#json_data{
-  width: 100%;
-  text-align: center;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
